# ESP32S3_SI4844

./: CMakeLists.txt  sdkconfig  sdkconfig.old
.history/core/src/: main_20250412224158.cpp  main_20250412224845.cpp
application/Gpio/: CMakeLists.txt  Gpio.cpp  Gpio.h
components/eeprom/: CMakeLists.txt  eeprom.cpp  eeprom.h
components/lvgl/: lv_conf.h
components/lvgl/src/core/: lv_obj_class_private.h
components/lvgl/src/widgets/spinbox/: lv_spinbox.c  lv_spinbox.h  lv_spinbox_private.h
core/inc/: GT911Constants.h  JC4827W543R.hpp  device.hpp  main.hpp
core/src/: CMakeLists.txt  main.cpp
